--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,6 +4,7 @@ bin/gegl-options.c
 gegl/gegl-init.c
 gegl/module/geglmodule.c
 operations/common/alien-map.c
+operations/common/antialias.c
 operations/common/bilateral-filter.c
 operations/common/bilateral-filter-fast.c
 operations/common/box-blur.c
@@ -13,6 +14,7 @@ operations/common/buffer-source.c
 operations/common/bump-map.c
 operations/common/c2g.c
 operations/common/cartoon.c
+operations/common/channel-mixer.c
 operations/common/checkerboard.c
 operations/common/color.c
 operations/common/color-reduction.c
