--- a/operations/external/Makefile.am
+++ b/operations/external/Makefile.am
@@ -159,10 +159,12 @@ rgbe_save_la_CFLAGS = $(AM_CFLAGS) -I $(top_srcdir)/libs
 rgbe_save_la_LIBADD = $(op_libs) $(top_builddir)/libs/rgbe/librgbe.la
 
 # Dependencies are in our source tree
+if HAVE_CAIRO
 ops += npd.la
 npd_la_SOURCES = npd.c
-npd_la_CFLAGS = $(AM_CFLAGS) $(NPD_CFLAGS)
-npd_la_LIBADD = $(op_libs) $(NPD_LIBS)
+npd_la_CFLAGS = $(AM_CFLAGS) $(NPD_CFLAGS) $(CAIRO_CFLAGS)
+npd_la_LIBADD = $(op_libs) $(NPD_LIBS) $(CAIRO_LIBS)
+endif
 
 BUILT_SOURCES = $(subst .c,.c.h,$(wildcard $(srcdir)/*.c))
 EXTRA_DIST += $(BUILT_SOURCES)
