Append original LD_LIBRARY_PATH to /tests/python/Makefile.am
Append original LD_LIBRARY_PATH to /tests/python/Makefile.am
to include the locally built BABL and thus make it unnecessary
to install system BABL packages.

--- a/tests/python/Makefile.am
+++ b/tests/python/Makefile.am
@@ -1,5 +1,5 @@
 TESTS_ENVIRONMENT = \
-    LD_LIBRARY_PATH=$(top_builddir)/gegl/.libs \
+    LD_LIBRARY_PATH=$(top_builddir)/gegl/.libs:$(LD_LIBRARY_PATH) \
 	GI_TYPELIB_PATH=$(top_builddir)/gegl:$(GI_TYPELIB_PATH) \
 	GEGL_SWAP=RAM \
 	GEGL_PATH=$(top_builddir)/operations/
