tests: clean up test outputs for distcheck

--- a/tests/simple/Makefile.am
+++ b/tests/simple/Makefile.am
@@ -43,3 +43,6 @@ AM_CFLAGS = $(DEP_CFLAGS) $(BABL_CFLAGS)
 # Common libs
 LIBS = $(top_builddir)/gegl/libgegl-$(GEGL_API_VERSION).la	\
 	$(DEP_LIBS) $(BABL_LIBS)
+
+clean-local:
+	rm -f test-exp-combine.hdr test-exp-combine-diff.png
