fix missing files in distcheck

--- a/tests/compositions/data/Makefile.am
+++ b/tests/compositions/data/Makefile.am
@@ -1,1 +1,5 @@
-EXTRA_DIST=$(wildcard $(srcdir)/*.png) $(wildcard $(srcdir)/*.jpg) $(wildcard $(srcdir)/*.jp2) $(wildcard $(srcdir)/*.hdr)
+EXTRA_DIST=$(wildcard $(srcdir)/*.png) \
+           $(wildcard $(srcdir)/*.jpg) \
+           $(wildcard $(srcdir)/*.jp2) \
+           $(wildcard $(srcdir)/*.hdr) \
+           $(wildcard $(srcdir)/*.pnm)
