Request a C99 compatible compiler

--- a/configure.ac
+++ b/configure.ac
@@ -143,6 +143,7 @@ AM_MAINTAINER_MODE([enable])
 
 dnl Checks for programs.
 AC_PROG_CC
+AC_PROG_CC_C99
 AC_PROG_CXX
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
