opencl: Initial version of OpenGL sharing
Works on OSX and Linux GLX, to enable sharing call
gegl_cl_init_with_opengl() instead of setting "use-opencl"
to TRUE. This must be done after you have your GL context
set up.

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -63,7 +63,8 @@ GEGL_public_HEADERS = \
 	gegl-chant.h			\
 	gegl-cpuaccel.h			\
 	gegl-plugin.h			\
-	buffer/gegl-tile.h
+	buffer/gegl-tile.h \
+	buffer/gegl-buffer-cl-iterator.h
 
 GEGL_sources = \
 	gegl-c.c			\
