tests: Test that OpenCL color kernels compiled
Doesn't check if they're accurate yet, just that they exist.

--- a/tests/simple/Makefile.am
+++ b/tests/simple/Makefile.am
@@ -17,6 +17,7 @@ noinst_PROGRAMS =			\
 	test-gegl-tile			\
 	test-misc			\
 	test-node-properties		\
+	test-opencl-colors		\
 	test-path			\
 	test-proxynop-processing	\
 	test-scaled-blit		\
