tests: Replace *.xml.sh with a python script

--- a/tests/compositions/Makefile.am
+++ b/tests/compositions/Makefile.am
@@ -10,125 +10,57 @@
 
 SUBDIRS=data
 
-EXTRA_DIST=$(wildcard $(srcdir)/*.xml) $(wildcard $(srcdir)/reference/*)
-
-# Env vars to make binaries use builddir stuff
-builddir_gegl_env = GEGL_SWAP=RAM GEGL_PATH=$(top_builddir)/operations
-
-# Binary paths
-gegl_bin = $(top_builddir)/bin/gegl$(EXEEXT)
-img_cmp_bin = $(top_builddir)/tools/img_cmp$(EXEEXT)
-detect_opencl_bin = $(top_builddir)/tools/detect_opencl$(EXEEXT)
-
-# Commands run in a builddir env
-builddir_gegl = $(builddir_gegl_env) $(gegl_bin)
-builddir_img_cmp = $(builddir_gegl_env) $(img_cmp_bin)
-builddir_detect_opencl = $(builddir_gegl_env) $(detect_opencl_bin)
-
-TESTS_ENVIRONMENT = \
-	GEGL_TEST_HAVE_OPENCL=$(shell $(builddir_detect_opencl))
-
-# These strings must not be inside XML file names; we use $(subst ...)
-opencl_testprefix = run-opencl-
-testprefix = run-
-testsuffix = .sh
+EXTRA_DIST=$(wildcard $(srcdir)/*.xml) $(wildcard $(srcdir)/reference/*) run-compositions.py
 
 # List of tests. The .sh suffix allows us to use $(wildcard $(srcdir)/*.xml) in
 # EXTRA_DISTS
 TESTS = \
-  run-affine-with-negative.xml.sh        \
-  run-opencl-affine-with-negative.xml.sh \
-  run-checkerboard.xml.sh                \
-  run-opencl-checkerboard.xml.sh         \
-  run-clones.xml.sh                      \
-  run-opencl-clones.xml.sh               \
-  run-colors.xml.sh                      \
-  run-opencl-colors.xml.sh               \
-  run-composite-transform.xml.sh         \
-  run-opencl-composite-transform.xml.sh  \
-  run-edge-laplace.xml.sh                \
-  run-opencl-edge-laplace.xml.sh         \
-  run-edge-sobel.xml.sh                  \
-  run-opencl-edge-sobel.xml.sh           \
-  run-fattal02.xml.sh                    \
-  run-opencl-fattal02.xml.sh             \
-  run-gamma.xml.sh                       \
-  run-opencl-gamma.xml.sh                \
-  run-hdr-color.xml.sh                   \
-  run-opencl-hdr-color.xml.sh            \
-  run-mantiuk06.xml.sh                   \
-  run-opencl-mantiuk06.xml.sh            \
-  run-pixelize.xml.sh                    \
-  run-opencl-pixelize.xml.sh             \
-  run-reflect.xml.sh                     \
-  run-opencl-reflect.xml.sh              \
-  run-reflect2.xml.sh                    \
-  run-opencl-reflect2.xml.sh             \
-  run-reinhard05.xml.sh                  \
-  run-opencl-reinhard05.xml.sh           \
-  run-rgb-params.xml.sh                  \
-  run-opencl-rgb-params.xml.sh           \
-  run-rotate.xml.sh                      \
-  run-opencl-rotate.xml.sh               \
-  run-simple-scale.xml.sh                \
-  run-opencl-simple-scale.xml.sh         \
-  run-softglow.xml.sh                    \
-  run-opencl-softglow.xml.sh             \
-  run-transform.xml.sh                   \
-  run-opencl-transform.xml.sh            \
-  run-rectangles.xml.sh                  \
-  run-opencl-rectangles.xml.sh
+  affine-with-negative.xml        \
+  checkerboard.xml                \
+  clones.xml                      \
+  colors.xml                      \
+  composite-transform.xml         \
+  edge-laplace.xml                \
+  edge-sobel.xml                  \
+  fattal02.xml                    \
+  gamma.xml                       \
+  hdr-color.xml                   \
+  mantiuk06.xml                   \
+  pixelize.xml                    \
+  reflect.xml                     \
+  reflect2.xml                    \
+  reinhard05.xml                  \
+  rgb-params.xml                  \
+  rotate.xml                      \
+  simple-scale.xml                \
+  softglow.xml                    \
+  transform.xml                   \
+  rectangles.xml
+
+  #run-matting-global.xml.sh
+  #run-matting-global-big.xml.sh
 
 NO_OPENCL_TESTS = \
-  run-rgbe-load.xml.sh                 \
-  run-rgbe-save.xml.sh                 \
-  run-pnm-raw-load.xml.sh              \
-  run-pnm-ascii-load.xml.sh
-
-  #run-matting-global.xml.sh           
-  #run-matting-global-big.xml.sh     
-
-TESTS += $(NO_OPENCL_TESTS)
+  rgbe-load.xml                 \
+  rgbe-save.xml                 \
+  pnm-raw-load.xml              \
+  pnm-ascii-load.xml
 
 # Conditional tests
 if HAVE_JASPER
-TESTS += run-jp2-load.xml.sh
+NO_OPENCL_TESTS += jp2-load.xml
 endif
 if HAVE_UMFPACK
-TESTS += run-matting-levin.xml.sh
+TESTS += matting-levin.xml
 endif
 
-
-
-# Create a separate executable script for each composition test to run
-opencl_test_to_xml = $(abs_srcdir)/$(subst $(testsuffix),,$(subst $(opencl_testprefix),,$(1)))
-opencl_test_to_ref = $(wildcard $(abs_srcdir)/reference/$(basename $(notdir $(call opencl_test_to_xml,$(1)))).*)
-opencl_test_to_out = $(abs_builddir)/output/opencl-$(notdir $(call opencl_test_to_ref,$(1)))
-$(opencl_testprefix)%.xml.sh: Makefile.am $(call opencl_test_to_xml,$@) $(call opencl_test_to_ref,$@)
-	@xml_file=$(call opencl_test_to_xml,$@)                            ;\
-	ref_img=$(call opencl_test_to_ref,$@)                              ;\
-	out_img=$(call opencl_test_to_out,$@)                              ;\
-	echo "#!/bin/bash" > $@                                            ;\
-	echo "if [ \"x\$$GEGL_TEST_HAVE_OPENCL\" = \"xno\" ]; then exit 77; fi" > $@ ;\
-	echo "mkdir -p $(abs_builddir)/output" >> $@                       ;\
-	echo "if [ -a $$out_img ]; then rm $$out_img ; fi" >> $@           ;\
-	echo "$(builddir_gegl) $$xml_file -o $$out_img" >> $@              ;\
-	echo "GEGL_USE_OPENCL=no $(builddir_img_cmp) $$ref_img $$out_img" >> $@ ;\
-	chmod +x $@
-
-test_to_xml = $(abs_srcdir)/$(subst $(testsuffix),,$(subst $(testprefix),,$(1)))
-test_to_ref = $(wildcard $(abs_srcdir)/reference/$(basename $(notdir $(call test_to_xml,$(1)))).*)
-test_to_out = $(abs_builddir)/output/$(notdir $(call test_to_ref,$(1)))
-$(testprefix)%.xml.sh: Makefile.am $(call test_to_xml,$@) $(call test_to_ref,$@)
-	@xml_file=$(call test_to_xml,$@)                                   ;\
-	ref_img=$(call test_to_ref,$@)                                     ;\
-	out_img=$(call test_to_out,$@)                                     ;\
-	echo "#!/bin/bash" > $@                                            ;\
-	echo "mkdir -p $(abs_builddir)/output" >> $@                       ;\
-	echo "if [ -a $$out_img ]; then rm $$out_img ; fi" >> $@           ;\
-	echo "GEGL_USE_OPENCL=no $(builddir_gegl) $$xml_file -o $$out_img" >> $@  ;\
-	echo "GEGL_USE_OPENCL=no $(builddir_img_cmp) $$ref_img $$out_img" >> $@   ;\
-	chmod +x $@
+check-TESTS: $(TESTS)
+	$(PYTHON) $(srcdir)/run-compositions.py \
+	  --build-dir=$(top_builddir) --src-dir=$(top_srcdir) --xml-dir=$(srcdir) \
+	  $(TESTS)
+	$(PYTHON) $(srcdir)/run-compositions.py --without-opencl \
+	  --build-dir=$(top_builddir) --src-dir=$(top_srcdir) --xml-dir=$(srcdir) \
+	  $(NO_OPENCL_TESTS)
 
 clean-local:
-	rm -f $(testprefix)*.xml$(testsuffix) output/*
+	rm -f output/*
