Add test-image-compare to .gitignore

--- a/tests/simple/.gitignore
+++ b/tests/simple/.gitignore
@@ -10,6 +10,7 @@
 /test-exp-combine.sh
 /test-gegl-rectangle
 /test-gegl-tile
+/test-image-compare
 /test-misc
 /test-node-properties
 /test-opencl-colors
