examples: Remove wildcards from Makefile.am
Needed to support conditional compilation of some future examples.

--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -1,14 +1,18 @@
 /*.lo
+/*.la
+/*.o
+/.deps
 /.libs
-/2geglbuffer*
 /Makefile
 /Makefile.in
-/csugar*
-/float-lookup*
-/gegl-convert*
-/gegl-paint*
-/gegl-slicer*
-/geglbuffer-add-image*
-/geglbuffer-clock*
-/hello-world*
-/hello-world-video*
+/*.exe
+/2geglbuffer
+/csugar
+/float-lookup
+/gegl-convert
+/gegl-paint
+/gegl-slicer
+/geglbuffer-add-image
+/geglbuffer-clock
+/hello-world
+/hello-world-video
