opencl: new source generator, cltostring.py
Which support escaping strings and a rather hacky include system.

--- a/opencl/Makefile.am
+++ b/opencl/Makefile.am
@@ -1,1 +1,8 @@
-EXTRA_DIST = $(wildcard $(srcdir)/*.cl) $(wildcard $(srcdir)/*.cl.h) $(wildcard $(srcdir)/*.pl)
+EXTRA_DIST = $(wildcard $(srcdir)/*.h) $(wildcard $(srcdir)/*.py)
+
+SOURCES = $(wildcard $(srcdir)/*.cl)
+
+BUILT_SOURCES = $(subst .cl,.cl.h,$(wildcard $(srcdir)/*.cl))
+
+%.cl.h: %.cl $(srcdir)/cltostring.py
+	$(PYTHON) $(srcdir)/cltostring.py $<
