gegl,opencl: share informations in a private header with opencl

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -97,6 +97,7 @@ GEGL_sources = \
 	gegl-matrix.h			\
 	gegl-module.h			\
 	gegl-plugin.h			\
+	gegl-random-priv.h		\
 	gegl-types-internal.h		\
 	gegl-xml.h
 
