tests: add a composition test for image-compare
even if image-compare tests itself, the critical part being in
simple/test-image-compare

--- a/tests/compositions/Makefile.am
+++ b/tests/compositions/Makefile.am
@@ -25,6 +25,7 @@ TESTS = \
   fattal02.xml                    \
   gamma.xml                       \
   hdr-color.xml                   \
+  image-compare.xml               \
   mantiuk06.xml                   \
   pixelize.xml                    \
   reflect.xml                     \
