tests: add a test case for stretch-contrast

--- a/tests/compositions/Makefile.am
+++ b/tests/compositions/Makefile.am
@@ -35,6 +35,7 @@ TESTS = \
   rotate.xml                      \
   simple-scale.xml                \
   softglow.xml                    \
+  stretch-contrast.xml            \
   transform.xml                   \
   rectangles.xml
 
