tests: add a test case for alien-map

--- a/tests/compositions/Makefile.am
+++ b/tests/compositions/Makefile.am
@@ -16,6 +16,7 @@ EXTRA_DIST=$(wildcard $(srcdir)/*.xml) $(wildcard $(srcdir)/reference/*) run-com
 # EXTRA_DISTS
 TESTS = \
   affine-with-negative.xml        \
+  alien-map.xml                   \
   checkerboard.xml                \
   clones.xml                      \
   colors.xml                      \
