tests: add a test case for weighted-blend

--- a/tests/compositions/Makefile.am
+++ b/tests/compositions/Makefile.am
@@ -42,6 +42,7 @@ TESTS = \
   softglow.xml                    \
   stretch-contrast.xml            \
   transform.xml                   \
+  weighted-blend.xml              \
   rectangles.xml
 
   #run-matting-global.xml.sh
